lab3/network-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mtdoom-np
  namespace: mordor
spec:
  podSelector:
    matchLabels:
      app: mtdoom
  policyTypes: ["Ingress"]
  ingress: 
    - from:
        - namespaceSelector:
            matchLabels:
              name: frodo
        - podSelector:
            matchLabels:
              app: sam
      ports:
        - protocol: TCP
          port: 80
